Add Sys.sleep in MAplots.Rnw, to give ghostscript on Windows a few seconds to finish before Sweave removes necessary temporary files
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@27354 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/MAplots.Rnw
+++ b/inst/doc/MAplots.Rnw
@@ -253,7 +253,10 @@ For \Rclass{AffyBatch} objects there is also a special function argument \Rfunar
 
 The \Rfunction{MAplot} function has many options and is more powerful than it might first appear. This document serves to highlight some of its more advanced features and demonstrates their usage.
 
-
+<<echo=FALSE>>=
+## give ghostscript on Windows a few seconds to catch up
+Sys.sleep(10)
+@ 
 
 \end{document}
 
