(1.15.3) Fixed very minor typo in vignette
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@28986 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.15.3
+------
+Fixed very minor typo in vignette
+
+
 1.15.2
 ------
 Remove some legacy C code from do_PLMrlm.c. This code was not part of the workflow for any user constructed fitPLM call. Removing it should help improve maintainability.
