(1.15.4) Removed fitPLM.old, PLM.designmatrix, PLM.designmatrix2 which were all legacy defuct functions.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@28987 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.15.4
+------
+
+Removed fitPLM.old, PLM.designmatrix, PLM.designmatrix2 which were all legacy defuct functions.
+
+
 1.15.3
 ------
 Fixed very minor typo in vignette
