Updated CHANGELOG to reflect changes to 1.15.6.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@30234 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.15.6
+------
+Replaced usage of soon to be defunct class exprSet with ExpressionSet.
+
+
 1.15.5
 ------
 Add narrays to PLMset-class, to ensure that show(Pset) works right. Fix summary(Pset)
@@ -5,7 +10,6 @@ Add narrays to PLMset-class, to ensure that show(Pset) works right. Fix summary(
 
 1.15.4
 ------
-
 Removed fitPLM.old, PLM.designmatrix, PLM.designmatrix2 which were all legacy defuct functions.
 
 
