(1.15.8) Remove the source file weightedkerneldensity.c which was not being used by any other code in any way. In otherwords, its removal will have no effect for users of the package.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@30533 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.15.8
+------
+remove weightedkerneldensity.c which was not used anywhere.
+
+
 1.15.6
 ------
 Replaced usage of soon to be defunct class exprSet with ExpressionSet.
