(1.15.9) rma background correction code from preprocessCore is now used source files rma_background2.c and rma_background2.h have been removed
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@30771 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+1.15.9
+------
+rma background correction code from preprocessCore is now used
+rma_background2.c and rma_background2.h are now removed
+
+
 1.15.8
 ------
 remove weightedkerneldensity.c which was not used anywhere.
