Removed usage (or reference) to pstricks tex style in BioC vignettes.
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@32981 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/MAplots.Rnw
+++ b/inst/doc/MAplots.Rnw
@@ -1,7 +1,7 @@
 %\VignetteIndexEntry{affyPLM: Advanced use of the MAplot function}
 %\VignettePackage{affyPLM}
 \documentclass[12pt]{article}
-\usepackage{amsmath,pstricks}
+\usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage[authoryear,round]{natbib}
 
