--- a/inst/doc/AffyExtensions.Rnw
+++ b/inst/doc/AffyExtensions.Rnw
@@ -1,7 +1,7 @@
 %\VignetteIndexEntry{affyPLM: Fitting Probe Level Models}
 %\VignettePackage{affyPLM}
 \documentclass[12pt]{article}
-\usepackage{amsmath,pstricks}
+\usepackage{amsmath}
 \usepackage{hyperref}
 \usepackage[authoryear,round]{natbib}
 
