(1.19.1 affyPLM) (1.5.1 preprocessCore) Fitting the default model using fitPLM() or rcModelPLM()  now returns both probe effect estimate and corresponding standard error for the last probe in the model (note that the default model constrains the sum of the probe effects to be equal to 0)
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@35038 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.19.1
+-------
+fitPLM() with the default model now returns values (coef, se) for the last probe in probeset
+
+
 1.17.1
 ------
 Fix typo in get.psi.code (Geman-McClure issue)
