(1.19.2) Change all relevant VECTOR_ELT/SET_VECTOR_ELT to STRING_ELT/SET_STRING_ELT. A number of functions are affected by this change (fitPLM() being a primary example).
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@36475 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+1.19.2
+------
+change all relevant VECTOR_ELT/SET_VECTOR_ELT to STRING_ELT/SET_STRING_ELT. A number of functions are affected by this change (fitPLM() being a primary example)
+
+
+
+
 1.19.1
 -------
 fitPLM() with the default model now returns values (coef, se) for the last probe in probeset
