(1.19.5) Fix issue with quality assessment vignette not building correctly due to internal changes in NUSE() function
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@36856 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.19.5
+------
+Fix issue with quality assessment vignette not building correctly due to internal changes in NUSE() function
+
+
 1.19.4
 ------
 Fix additional NAMESPACE issue
