(1.27.5) Small modifications to vignette code
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@52492 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/MAplots.Rnw
+++ b/inst/doc/MAplots.Rnw
@@ -86,7 +86,8 @@ MAplot(eset.Dilution,plot.method="smoothScatter")
 with the resulting set of MA-plots shown in Figure \ref{smoothScatter}.
 
 <<smoothScatterDo, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("MAplotsmoothScatter.png",height=8,width=8,pointsize=10,res=300)
+##bitmap("MAplotsmoothScatter.png",height=8,width=8,pointsize=10,res=300)
+png("MAplotsmoothScatter.png",height=8,width=8,pointsize=10,res=300,units="in")
 par(mfrow=c(2,2))
 MAplot(eset.Dilution,plot.method="smoothScatter",nrpoints=256)
 dev.off()
@@ -109,7 +110,7 @@ MAplot(eset.Dilution,plot.method="smoothScatter",ref=1)
 with the results shown in Figure \ref{smoothScatterRef}.
 
 <<RefUsageDo, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("MAplotsmoothScatterRef.png",height=8,width=8,pointsize=10,res=300)
+png("MAplotsmoothScatterRef.png",height=8,width=8,pointsize=10,res=300,units="in")
 par(mfrow=c(2,2))
 MAplot(eset.Dilution,ref=1,plot.method="smoothScatter",nrpoints=256)
 dev.off()
@@ -133,7 +134,7 @@ MAplot(eset.Dilution,which=c(2,4),ref=1,plot.method="smoothScatter")
 @ 
 with the resultant plots shown in Figure \ref{smoothScatterWhich}. Notice that these are identical to the corresponding plots in Figure \ref{smoothScatterRef}.
 <<RefUsageWhichShow, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("MAplotsmoothScatterWhich.png",height=8,width=8,pointsize=10,res=300)
+png("MAplotsmoothScatterWhich.png",height=8,width=8,pointsize=10,res=300,units="in")
 par(mfrow=c(2,1))
 MAplot(eset.Dilution,which=c(2,4),ref=1,plot.method="smoothScatter",nrpoints=256)
 dev.off()
@@ -157,7 +158,7 @@ MAplot(eset.Dilution,which=c(1,2),ref=c(1,2),plot.method="smoothScatter")
 creates the MA-plots for the first and second arrays each against a median reference array created using these two arrays. The resulting plots are shown in Figure \ref{smoothScatterSubset}.
 
 <<SubsetUsageWhichDo, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("MAplotsmoothScatterSubset.png",height=8,width=8,pointsize=10,res=300)
+png("MAplotsmoothScatterSubset.png",height=8,width=8,pointsize=10,res=300,units="in")
 par(mfrow=c(2,1))
 MAplot(eset.Dilution,which=c(1,2),ref=c(1,2),plot.method="smoothScatter",nrpoints=256)
 dev.off()
@@ -201,7 +202,7 @@ which results in Figure \ref{UsingAddPercentPresent}.
 
 
 <<addDo, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("MAplotadd.png",height=8,width=8,pointsize=10,res=300)
+png("MAplotadd.png",height=8,width=8,pointsize=10,res=300,units="in")
 par(mfrow=c(1,1))
 MAplot(eset.Dilution[Number.Present ==4,],show.statistics=FALSE,which=1,pch=20,cex=0.4,ylim=c(-0.8,0.8),xlim=c(2,15),add.loess=FALSE)
 MAplot(eset.Dilution[Number.Present ==0,],plot.method="add",col="red",which=1,pch=20,cex=0.4,show.statistics=FALSE,add.loess=FALSE)
@@ -229,7 +230,7 @@ MAplot(eset.Dilution,groups=c("Liver 20","Liver 20","Liver 10","Liver 10"),ref="
 with the resulting plot in Figure \ref{UsingGroups}.
 
 <<groupsDo,results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("MAplotgroups.png",height=8,width=8,pointsize=10,res=300)
+png("MAplotgroups.png",height=8,width=8,pointsize=10,res=300,units="in")
 MAplot(eset.Dilution,groups=c("Liver 20","Liver 20","Liver 10","Liver 10"),ref="Liver 10")
 dev.off()
 @
