(1.27.6) Additional changes to vignettes so all images are generated using png() device rather than bitmap()
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPLM@52509 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/MAplots.Rnw
+++ b/inst/doc/MAplots.Rnw
@@ -60,7 +60,7 @@ MAplot(eset.Dilution)
 @ 
 
 <<FirstUsageDo, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("MAplotFirstUse.png",height=8,width=8,pointsize=10,res=300)
+png("MAplotFirstUse.png",height=8,width=8,pointsize=10,res=300,units="in")
 par(mfrow=c(2,2))
 MAplot(eset.Dilution)
 dev.off()
