--- a/inst/doc/QualityAssess.Rnw
+++ b/inst/doc/QualityAssess.Rnw
@@ -86,12 +86,12 @@ with Figure \ref{weightscolor} showing the results. Note that it is recommended 
 
 
 <<weightscolorImageDo, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("Quality-weightimage2a.png",height=4,width=4,res=300)
+png("Quality-weightimage2a.png",height=8,width=8,res=300,units="in")
 par(mar=c(2.0,2.1,1.6,1.1),oma=c(1,1,0,0))
 image(Pset,which=2,col=gray(0:25/25),add.legend=T)
 dev.off()
 
-bitmap("Quality-weightimage2b.png",height=4,width=4,res=300)
+png("Quality-weightimage2b.png",height=8,width=8,res=300,units="in")
 par(mar=c(2.0,2.1,1.6,1.1),oma=c(1,1,0,0))
 image(Pset,which=2,col=gray(25:0/25),add.legend=T)
 dev.off()
@@ -157,11 +157,11 @@ image(Pset,which=2,type="pos.resids",col=pseudoPalette(low="yellow",high="darkbl
 
 
 <<residualcolorImageDo, results=hide, echo=FALSE, fig=FALSE>>=
-bitmap("Quality-residualimages5.png",height=4,width=4,res=300)
+png("Quality-residualimages5.png",height=8,width=8,res=300,units="in")
 par(mar=c(2.0,2.1,1.6,1.1),oma=c(1,1,0,0))
 image(Pset,which=2,type="resids",col=pseudoPalette(low="darkgreen",high="magenta",mid="lightgrey"),add.legend=TRUE)
 dev.off()
-bitmap("Quality-residualimages6.png",height=4,width=4,res=300)
+png("Quality-residualimages6.png",height=8,width=8,res=300,units="in")
 par(mar=c(2.0,2.1,1.6,1.1),oma=c(1,1,0,0))
 image(Pset,which=2,type="pos.resids",col=pseudoPalette(low="yellow",high="darkblue"),add.legend=TRUE)
 dev.off()
